# example-mod

./: CMakeLists.txt  Geode-locig.md  README.md  mod.json
.github/workflows/: build.yml
src/: main.cpp
